# routes/workers.js
@@ -1,0 +1,12 @@
+
+
+const express = require('express');
+const contactsController = require('../controllers/workers');
+const router = express.Router();
+//Workers
+router.get('/', contactsController.getWorkers);
+router.get('/:id', contactsController.getWorker);
+
+router.post('/', contactsController.createWorker);
+
+module.exports = router;
